--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,6 +5,9 @@ body {
   font-family: sans-serif;
   height: 100vh;
   overflow: hidden;
+  background-image: url('/assets/restaurant.avif');
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 .centered {
@@ -63,8 +66,10 @@ body {
 /* PRODUCT STRIP */
 
 .product-strip {
-  min-height: 100%;
+  flex-grow: 1;
+  overflow-x: scroll;
 }
+
 
 .product-scroll-wrapper {
   flex-grow: 1;
@@ -76,7 +81,9 @@ body {
   border: 1px solid #ddd;
   text-align: center;
   width: 180px;
-  flex: 0 0 auto
+  flex: 0 0 auto;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease;
 }
 
 
