--- a/restaurant-webapp/src/index.css
+++ b/restaurant-webapp/src/index.css
@@ -1,10 +1,8 @@
-/* index.css */
-
 body {
   margin: 0;
   font-family: sans-serif;
   height: 100vh;
-  overflow: hidden;
+  overflow: visible;
   background-image: url('/assets/restaurant.avif');
   background-repeat: repeat;
   background-size: auto;
@@ -18,20 +16,14 @@ body {
   height: 100vh;
 }
 
-.lang-buttons button {
-  margin: 10px;
-  padding: 1rem 2rem;
-  font-size: 1.2rem;
-}
-
 /* MENU PAGE STRUCTURE */
 
 .menu-horizontal {
   display: flex;
   flex-direction: row;
   height: auto;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow-x: visible;
+  overflow-y: visible;
   position: relative;
 }
 
@@ -208,12 +200,49 @@ body {
   flex-direction: column;
 }
 
+.cart-item-name {
+  font-size: smaller;
+  font-weight: bold;
+}
+
 .cart-item-controls {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0rem;
   margin-top: 0.5rem;
 }
+
+.cart-item-controls button {
+  background: linear-gradient(to bottom, #f3c56b, #c97e16);
+  color: black;
+  border: none;
+  width: 26px;
+  height: 26px;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.cart-item-controls button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+}
+
+.cart-item-controls span {
+  background-color: #fff8ea;
+  padding: 0.3rem 0.6rem;
+  margin: 0 0.3rem;
+  border-radius: 6px;
+  font-weight: bold;
+  font-size: 0.95rem;
+  min-width: 1.5rem;
+  text-align: center;
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);
+}
+
+
 
 .cart-footer {
   display: flex;
@@ -270,10 +299,12 @@ body {
 
 .lang-buttons button {
   width: 200px;
+  margin: 10px;
   padding: 1rem 2rem;
   font-size: 1.2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  background-color: #e6b800;
 }
